# gitbutler

./: .infisical.json  Cargo.toml
.cargo/: config.toml
.github/prs/: HISTORY.md  PR.md  RETRO.md  SKILLS.md
.github/prs/1/: AGENT.md  INDEX.md  ISSUE.md  PLAN-NEXT.md  agents.json
.github/prs/2/: AGENT.md  INDEX.md  agents.json
.github/prs/2/retro/: agent-workflow.md  cli-tool-builder.md  code-review.md  devops-automation.md
.github/rfp/: PROTOCOL-ANALYSIS.md  PROTOCOL-SPEC-DRAFT.md  WEAVE-CRITIQUE-RFP.md  WORKTREE-INTEGRATION-ANALYSIS.md
.github/rfp/cross-evaluation/: retro.md
.github/workflows/: wasi.yaml
.mcagent/agents/but/: AGENT.md  PLAN.md
.mcagent/rfp/: REGISTRY.md  RFP.md  SEED.md
.mcagent/rfp/orgs/000-mcagent/: AGENTS.md  EVALUATIONS.md  PROPOSAL.md  RANKINGS.md  README.md  SELF-EVAL.md
.mcagent/rfp/orgs/001-tidal-protocol-collective/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/002-iron-wake-command/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/003-phosphor-maritime-institute/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/004-driftwood-and-canvas/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/005-bowline-ventures/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/006-admiralty-bureau-of-freight-standards/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/007-order-of-the-leviathan/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/008-regatta-systems/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/009-stellamaris-and-sons/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/010-deeproute-syndicate/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/011-shard-and-bone-assembly/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/012-heritage-garrison-corps/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/013-stratigraphy-lab-at-thornfield/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/014-ruins-atelier/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/015-paststack/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/016-directorate-of-antiquities-compliance/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/017-custodians-of-jericho/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/018-dig-league-international/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/019-casa-terracotta/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/020-strata-9/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/021-resonance-without-leaders/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/022-cadence-division/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/023-harmonic-analysis-group/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/024-velvet-frequencies/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/025-hitforge/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/orgs/026-federal-music-standardization-office/: AGENTS.md  PROPOSAL.md  README.md
.mcagent/rfp/websites/: 001-tidal-protocol-collective.html  083-textile-morphology-lab.html  084-loom-and-verse.html  093-longevity-and-risk-research-centre.html  145-shelfos.html  protocol.html  unified.html
crates/but/: Cargo.toml
crates/but-action/src/: auto_commit.rs  lib.rs
crates/but-ai/: Cargo.toml
crates/but-ai/src/: lib.rs  types.rs
crates/but-ai/src/agent/: architect.rs  budget.rs  coordinator.rs  implementer.rs  mod.rs  phase_gate.rs  validator.rs
crates/but-ai/src/coordination/: dependency.rs  forge.rs  gossip.rs  messages.rs  mod.rs
crates/but-ai/src/identity/: authorization.rs  key_lifecycle.rs  mod.rs  performance.rs  signing.rs
crates/but-ai/src/memory/: call_number.rs  classification.rs  compaction.rs  controlled_vocab.rs  lifecycle.rs  mod.rs  retrieval.rs  see_also.rs  store.rs
crates/but-ai/src/narrative/: arc.rs  mod.rs  motif.rs  summary.rs  tension.rs
crates/but-ai/src/survival/: distributions.rs  fitting.rs  hazard.rs  mod.rs  surprise.rs
crates/but-ai/src/validation/: continuity.rs  contradiction.rs  integrity.rs  mod.rs  tool_risk.rs
crates/but-ai/src/worktree/: colocation.rs  mod.rs  output.rs  status.rs  task.rs
crates/but-ai/tests/: scoring_and_coordination.rs  survival_and_narrative.rs
crates/but-core/: Cargo.toml
crates/but-core/src/: sync.rs
crates/but-core/src/worktree/: mod.rs
crates/but-core/src/worktree/checkout/: mod.rs
crates/but-ctx/: Cargo.toml
crates/but-ctx/src/: access.rs  lib.rs
crates/but-db/: Cargo.toml
crates/but-db/src/: lib.rs
crates/but-hunk-assignment/src/: lib.rs
crates/but-installer/: Cargo.toml
crates/but-link/: Cargo.toml
crates/but-link/src/: commands.rs  lib.rs
crates/but-oxidize/: Cargo.toml
crates/but-oxidize/src/: lib.rs
crates/but-path/: Cargo.toml
crates/but-path/src/: lib.rs
crates/but-secret/: Cargo.toml
crates/but-secret/src/: secret.rs
crates/but-serde/: Cargo.toml
crates/but-settings/: Cargo.toml
crates/but-settings/src/: watch.rs
crates/but-update/: Cargo.toml
crates/but-wasi-host/: Cargo.toml
crates/but-wasi-host/src/: main.rs  sandbox.rs
crates/but-wasi-host/tests/: commands.rs  sandbox.rs  smoke.rs
crates/but-wasi-host/tests/common/: mod.rs
crates/but/src/: alias.rs  lib.rs  main.rs  setup.rs
crates/but/src/args/: branch.rs  link.rs  metrics.rs  mod.rs  plugin.rs  sync.rs
crates/but/src/command/: alias.rs  config.rs  eval_hook.rs  gui.rs  help.rs  mod.rs  onboarding.rs  plugin.rs  sync.rs  update.rs
crates/but/src/command/branch/: apply.rs
crates/but/src/command/legacy/: absorb.rs  commit.rs  refresh.rs  reword.rs
crates/but/src/command/legacy/branch/: json.rs  list.rs  mod.rs
crates/but/src/command/legacy/diff/: mod.rs  show.rs
crates/but/src/command/legacy/rub/: amend.rs  assign.rs  mod.rs  squash.rs
crates/but/src/command/legacy/status/: mod.rs
crates/but/src/tui/: text.rs
crates/but/src/utils/: metrics.rs  mod.rs  output_channel.rs  text.rs
crates/but/tests/but/command/branch/: apply.rs  unapply.rs
crates/gitbutler-reference/: Cargo.toml
scripts/: but-overlay-workspaces.sh  but_functions.sh
(+689 files in other folders)
