[package]
name = "but-ai"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
edition.workspace = true
publish = false
rust-version.workspace = true
description = "Unified AI agent plugin for GitButler"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
