[package]
name = "but-core"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "A leaf-crate with core algorithms and types"

[lib]
doctest = false

[features]
export-ts = ["dep:ts-rs"]
export-schema = ["dep:schemars", "dep:but-schemars"]
## Make legacy functionality available.
legacy = []

[dependencies]
but-error.workspace = true
but-project-handle.workspace = true
but-serde.workspace = true

serde.workspace = true
bstr.workspace = true
tracing.workspace = true
anyhow.workspace = true
unicode-segmentation.workspace = true
tempfile.workspace = true
gix = { workspace = true, features = [
    "dirwalk",
    "serde",
    "status",
    "merge",
] }
# for V1 conflict commits
toml.workspace = true
chardetng = "0.1.17"

# for `id`
uuid.workspace = true

parking_lot = { workspace = true, features = ["arc_lock"] }

# For generating change-ids
rand.workspace = true

# Native-only deps (not available on WASI)
[target.'cfg(not(target_os = "wasi"))'.dependencies]
git2.workspace = true
but-oxidize.workspace = true
fslock = "0.2.1"
gix = { workspace = true, features = ["credentials", "parallel"] }
ts-rs = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
but-schemars = { workspace = true, optional = true }

[dev-dependencies]
but-testsupport.workspace = true
gix = { workspace = true, features = ["revision"] }
serde_json = "1.0"
insta.workspace = true

[lints]
workspace = true
