[package]
name = "but-link"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "multi-agent coordination via repo-scoped `SQLite`"

[lib]
doctest = false

[features]
default = ["tui"]
tui = ["dep:crossterm", "dep:ratatui"]

[dependencies]
but-ctx.workspace = true
but-db.workspace = true

anyhow.workspace = true
gix.workspace = true
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile.workspace = true
