[package]
name = "but-oxidize"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "Utilities to convert between `gitoxide` and `git`"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
gix = { workspace = true, features = ["merge"] }

# Native-only deps
[target.'cfg(not(target_os = "wasi"))'.dependencies]
git2.workspace = true

[lints]
workspace = true
