[package]
name = "but-path"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true

# Native-only deps
[target.'cfg(not(target_os = "wasi"))'.dependencies]
dirs = "6.0.0"
open.workspace = true
[lints]
workspace = true
