[package]
name = "but-secret"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
autotests = false

[lib]
doctest = false

[dependencies]
but-error.workspace = true

anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
gix = { workspace = true, features = ["dirwalk"] }

# Native-only deps
[target.'cfg(not(target_os = "wasi"))'.dependencies]
keyring.workspace = true
gix = { workspace = true, features = ["credentials", "parallel"] }

[[test]]
name="secret"
path = "tests/mod.rs"

[dev-dependencies]

[lints]
workspace = true
