[package]
name = "but-serde"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[features]
legacy = ["dep:git2"]
wasi = []   # WASI target: no git2 deps. gix-based modules always available.

[dependencies]
git2 = { workspace = true, optional = true }

gix.workspace = true
serde.workspace = true
bstr.workspace = true

[lints]
workspace = true
