[package]
name = "but-settings"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[features]
export-ts = []

[lib]
doctest = false

[dependencies]
but-path.workspace = true
but-fs.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision"] }
serde_json_lenient.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
ts-rs.workspace = true

# Native-only deps
[target.'cfg(not(target_os = "wasi"))'.dependencies]
notify.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
