[package]
name = "but-wasi-host"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "Sandboxed WASI host for the but CLI via wasmtime"

[[bin]]
name = "but-wasi"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "29.0.1", default-features = false, features = ["component-model", "cranelift"] }
wasmtime-wasi = { version = "29.0.1", default-features = false }
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "std", "help", "env"] }
dirs.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
