[package]
name = "but"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license-file = "../../LICENSE.md"
description = "A GitButler CLI tool"
authors.workspace = true
readme = "../../README.md"
publish = false
rust-version.workspace = true

[[bin]]
name = "but"
path = "src/main.rs"
doctest = false

[features]
default = ["legacy", "tui", "native"]
## A very specific utility flag to make clear that the 'but' binary is managed by a package manager.
## When set, the CLI cannot self-manage itself and commands like `but update install` are disabled.
packaged-but-distribution = []

# Marker features for platform capability gating
tui = ["dep:ratatui", "dep:crossterm", "dep:minus", "dep:terminal_size"]
native = [
    "dep:command-group",        # s05
    "dep:posthog-rs",           # s05
    "dep:machine-uid",          # s05
    "dep:but-github",           # s06
    "dep:but-gitlab",           # s06
    "dep:but-forge",            # s06
    "dep:but-update",           # s06
    "dep:but-llm",              # s06
    "dep:git2",                 # s07
    "dep:dirs",                 # s07
    "dep:but-installer",        # s07
    "dep:but-api",              # s13 — heavy transitive deps
    "dep:but-workspace",        # s13
    "dep:but-graph",            # s13
    "dep:but-rebase",           # s13
    "dep:but-link",             # s13
    "dep:but-forge-storage",    # s13
    "dep:but-hunk-assignment",  # s13
    "dep:rmcp",                 # s13 — networking
    "dep:cli-prompts",          # s13 — interactive terminal
]
wasi = []

legacy = [
    "but-workspace/legacy",
    "but-api/legacy",
    "but-ctx/legacy",
    "dep:but-action",
    "dep:but-claude",
    "dep:but-cursor",
    "dep:but-tools",
    "dep:but-rules",
    "dep:but-gerrit",
    "dep:but-worktrees",
    "dep:but-cherry-apply",
    "dep:gitbutler-project",
    "dep:gitbutler-commit",
    "dep:gitbutler-stack",
    "dep:gitbutler-branch-actions",
    "dep:gitbutler-branch",
    "dep:gitbutler-reference",
    "dep:gitbutler-oplog",
    "dep:gitbutler-edit-mode",
    "dep:gitbutler-operating-modes",
    "dep:gitbutler-repo",
    "dep:gitbutler-repo-actions",
]

[dependencies]
but-core.workspace = true
but-settings.workspace = true
but-serde.workspace = true
but-secret.workspace = true
but-update = { workspace = true, optional = true }
but-installer = { workspace = true, optional = true }
but-path.workspace = true
but-ctx.workspace = true
but-rebase = { workspace = true, optional = true }
but-github = { workspace = true, optional = true }
but-gitlab = { workspace = true, optional = true }
but-forge = { workspace = true, optional = true }
but-forge-storage = { workspace = true, optional = true }
but-workspace = { workspace = true, optional = true }
but-api = { workspace = true, features = ["path-bytes"], optional = true }
but-graph = { workspace = true, optional = true }
but-llm = { workspace = true, optional = true }
but-link = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }

# What follows is *basically* newly written crates that are built on top of legacy,
# so need some refactoring/rethinking to become usable.
but-action = { workspace = true, optional = true }
# Still uses `gitbutler-stack`, but otherwise it is non-legacy.
but-hunk-assignment = { workspace = true, optional = true }
but-claude = { workspace = true, optional = true }
but-cursor = { workspace = true, optional = true }
but-tools = { workspace = true, optional = true }
but-rules = { workspace = true, optional = true }
but-gerrit = { workspace = true, optional = true }
but-worktrees = { workspace = true, optional = true }
but-cherry-apply = { workspace = true, optional = true }

gitbutler-project = { workspace = true, optional = true }
gitbutler-commit = { workspace = true, optional = true }
gitbutler-stack = { workspace = true, optional = true }
gitbutler-branch-actions = { workspace = true, optional = true }
gitbutler-branch = { workspace = true, optional = true }
gitbutler-reference = { workspace = true, optional = true }
gitbutler-oplog = { workspace = true, optional = true }
gitbutler-edit-mode = { workspace = true, optional = true }
gitbutler-operating-modes = { workspace = true, optional = true }
gitbutler-repo = { workspace = true, optional = true }
gitbutler-repo-actions = { workspace = true, optional = true }

schemars.workspace = true
posthog-rs = { git = "https://github.com/gitbutlerapp/posthog-rs", rev = "664c9245f79aaedcdd025b9f3c141b62bb866b8e", optional = true }
serde.workspace = true
shell-words.workspace = true
strum = { version = "0.27", features = ["derive"] }
clap = { workspace = true, features = [
    "env",
    "wrap_help",
    "color",
    "error-context",
    "usage",
    "suggestions",
] }
clap_complete = "4.5.64"
chrono.workspace = true
bstr.workspace = true
regex.workspace = true
anyhow.workspace = true
rmcp = { workspace = true, optional = true }
command-group = { version = "5.0.1", features = ["with-tokio"], optional = true }
gix = { workspace = true, features = ["tracing", "tracing-detail"] }
colored = "3.0.0"
serde_json.workspace = true
boolean-enums.workspace = true
terminal_size = { version = "0.4.3", optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-forest.workspace = true
cli-prompts = { path = "vendor/cli-prompts", optional = true }
dirs = { workspace = true, optional = true }
minus = { git = "https://github.com/arijit79/minus", rev = "57f1848f831d153a10d65060562ce1fdde938a01", default-features = false, features = [
    "static_output",
    "search",
], optional = true }
unicode-width = "0.2"
cfg-if = "1.0.4"
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
sha2.workspace = true
machine-uid = { version = "0.5.4", optional = true }
tempfile.workspace = true
nonempty.workspace = true
itertools.workspace = true
self_cell.workspace = true
rand.workspace = true
ratatui-textarea = "0.8.0"
arboard = { version = "3.6.1", default-features = false }
ansi-to-tui = "8.0.1"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "io-std"] }

[target.'cfg(target_os = "wasi")'.dependencies]
tokio = { workspace = true, features = ["rt", "io-std"] }

[dev-dependencies]
but-graph.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
but-testsupport = { workspace = true, features = ["sandbox-but-api"] }
snapbox = { workspace = true, features = ["term-svg"] }
shell-words.workspace = true
insta.workspace = true
temp-env = "0.3"

[lints]
workspace = true
