[package]
name = "gitbutler-reference"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
but-core.workspace = true

anyhow.workspace = true
gix.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_os = "wasi"))'.dependencies]
git2.workspace = true

[lints]
workspace = true
